examples/test/testpolicy5938.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5938
  namespace: namespace409
spec:
  podSelector:
    matchLabels:
      key7: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value33
          key6: value41
      podSelector:
        matchLabels:
          key31: value30
          key38: value24
